# bogeyians

./: .gitignore  README
backend/consumer/: Makefile  README.rst  alembic.ini  pyproject.toml
backend/consumer/consumer/: football.py  models.py  schema.py
backend/consumer/db/: models.py
backend/consumer/manipulator/: filter_league_data.py
backend/consumer/migration_scripts/: env.py
backend/consumer/migration_scripts/versions/: abfd09eb16c1_added_league_table.py
backend/consumer/migrations/: env.py
backend/consumer/migrations/versions/: 4e281b0e8067_added_leagues_added_column.py  8ecfcb15f86c_added_leagues_table.py  c24424d0abd2_remove_column_and_more.py
backend/consumer/util/: common.py  custom_types.py
backend/db_api/: pyproject.toml
backend/db_api/db_api/: main.py
backend/db_api/tests/: test_consumer.py
