[tool.poetry]
name = "consumer"
version = "2022.11.3.0"
description = ""
authors = ["data-eng <engineers@bogeyians.com>"]

[[tool.poetry.source]]
name = "pypi-gloabl"
url = "https://pypi.python.org/simple"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "1.4.22"
requests = "2.25.0"
psycopg2-binary = "^2.9.2"
click = "^8.0.3"
alembic = "^1.8.1"
ormar = "0.12.0"
databases = "^0.6.1"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pylint = "^2.11.1"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"